@@ -22,6 +22,8 @@
 #ifndef INCL_SCALE_HQ3X_H
 #define INCL_SCALE_HQ3X_H	1
 
+#ifdef USE_HQ3X_SCALER
+
 /** 
  ** Note: This file should only be included by source files that use the
  ** templates below; the templates will only be instantiated when they
@@ -3758,4 +3760,6 @@ void Scale_Hq3x
 		}
 	}
 
-#endif
+#endif //USE_HQ3X_SCALER
+
+#endif //INCL_SCALE_HQ3X_H
